--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <body>
     <div id="container" class="container">
       <div id="content"></div>
+      <div id="units"></div>
     </div>
 
     <script id="army-template" type="text/x-handlebars-template">
@@ -102,8 +103,11 @@
         </div>
       </div>
       {{/with}}
+    </script>
 
-      {{#each units}}
+    <script id="units-template" type="text/x-handlebars-template">
+      {{#each this}}
+      {{#if unit.length}}
       <h2>{{name}}</h2>
 
       {{> card-with-margin}}
@@ -161,6 +165,7 @@
       </div>
 
       {{> special-rules}}
+      {{/if}}
       {{/each}}
 
       <p>&nbsp;</p>
@@ -179,7 +184,8 @@
       $(document).ready(function () {
           console.log("[document-ready] initializing...");
 
-          var template = Handlebars.compile($("#army-template").html());
+          var armyTemplate = Handlebars.compile($("#army-template").html());
+          var unitsTemplate = Handlebars.compile($("#units-template").html());
 
           $.get("partials/special-rules.html").done(function (template) {
               Handlebars.registerPartial('special-rules', template);
@@ -239,8 +245,21 @@
           var list = urlSearchParams.get("list");
 
           $.getJSON("lists/" + race + "/" + list +".json", function (data) {
-              $("#content").html(template(data));
-          })  .fail(function( jqxhr, textStatus, error ) {
+              $("#content").html(armyTemplate(data));
+
+              $.getJSON("lists/" + race + "/" + race + ".json", function (units) {
+                var available = '[';
+                units.forEach(function(section) {
+                  section.unit = section.unit.filter(function(unit) {
+                    available = available + '\"' + unit.name + '\",'
+                    return data.units.includes(unit.name);
+                  })
+                })
+                console.log(available + ']')
+
+                $("#units").html(unitsTemplate(units));
+              })
+          }).fail(function( jqxhr, textStatus, error ) {
               $("#content").html('<h2 class="text-danger">These Are Not The Droids Youre Looking For</h2><p>File: lists/' + race + '/' + list +'.json missing or invalid, error: ' + textStatus);
           });
         });
