--- a/index.html
+++ b/index.html
@@ -318,7 +318,13 @@
                       unit.weapons = unit.weapons.map(function(weapon){
                         if (typeof weapon === 'string') {
                           var values = weapon.split('|');
-                          var weaponObject = JSON.parse(JSON.stringify(weaponsMap[values[0]]))// Object.assign({}, weaponsMap[values[0]]);
+
+                          if (!weaponsMap[values[0]])
+                          {
+                            console.log("Weapon definition missing: ", values[0]);
+                          }
+
+                          var weaponObject = JSON.parse(JSON.stringify(weaponsMap[values[0]]))
 
                           // More than one weapon
                           if (values.length > 1 && values[1])
