--- a/website/index.htm
+++ b/website/index.htm
@@ -22,7 +22,7 @@
     /* Hide the carousel text when the screen is less than 600 pixels wide */
     @media (max-width: 600px) {
       .carousel-caption {
-        display: none; 
+        display: none;
       }
     }
   </style>
@@ -37,7 +37,7 @@
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
+        <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="#">EA-Apocalypse</a>
     </div>
@@ -55,7 +55,7 @@
   </div>
 </nav>
 
-<div class="container text-center">    
+<div class="container text-center">
   <h3>Scenarios</h3>
   <br>
   <div class="row">
@@ -63,137 +63,137 @@
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
       <p>Battle Line</p>
     </div>
-    <div class="col-sm-3"> 
+    <div class="col-sm-3">
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-      <p>Fog of War</p>    
+      <p>Fog of War</p>
     </div>
-    <div class="col-sm-3"> 
+    <div class="col-sm-3">
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-      <p>Fire the Beacons</p>    
+      <p>Fire the Beacons</p>
     </div>
   </div>
   <hr>
 </div>
 
-<div class="container text-center">    
+<div class="container text-center">
   <h3>Imperial Forces</h3>
   <br>
   <div class="row">
     <div class="col-sm-2">
-      <img src="img/AdeptusAstartes.jpg" class="img-responsive" style="width:100%" alt="Image">
+      <img src="img/AdeptusAstartes_Codex.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Adeptus Astertes<br>Codex Astartes</p>
     </div>
-    <div class="col-sm-2"> 
-      <img src="img/AdeptusAstartes.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Adeptus Astertes<br>Iron Hands</p>    
+    <div class="col-sm-2">
+      <img src="img/AdeptusAstartes_Hands.jpg" class="img-responsive" style="width:100%" alt="Image">
+      <p>Adeptus Astertes<br>Iron Hands</p>
     </div>
-    <div class="col-sm-2"> 
-      <img src="img/AdeptusAstartes.jpg" class="img-responsive" style="width:100%" alt="Image">
+    <div class="col-sm-2">
+      <img src="img/AdeptusAstartes_Raven.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Adeptus Astartes<br>Raven Guard</p>
     </div>
-    <div class="col-sm-2"> 
-      <img src="img/AdeptusAstartes.jpg" class="img-responsive" style="width:100%" alt="Image">
+    <div class="col-sm-2">
+      <img src="img/AdeptusAstartes_White.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Adeptus Astartes<br>White Scars</p>
-    </div> 
-    <div class="col-sm-2"> 
-      <img src="img/AdeptusMechanicus.jpg" class="img-responsive" style="width:100%" alt="Image">
+    </div>
+    <div class="col-sm-2">
+      <img src="img/AdeptusMechanicus_Fleet.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Adeptus Mechanicus<br>Explorator Fleet</p>
-    </div>     
-    <div class="col-sm-2"> 
-      <img src="img/AdeptusMechanicus.jpg" class="img-responsive" style="width:100%" alt="Image">
+    </div>
+    <div class="col-sm-2">
+      <img src="img/AdeptusMechanicus_Skitarii.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Adeptus Mechanicus<br>Skitarii</p>
-    </div> 
+    </div>
   </div>
   <div class="row">
     <div class="col-sm-2">
-      <img src="img/AdeptusMechanicus.jpg" class="img-responsive" style="width:100%" alt="Image">
+      <img src="img/AdeptusMechanicus_Questoris.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Adeptus Mechanicus<br>Questoris Mechanicus</p>
     </div>
-    <div class="col-sm-2"> 
-      <img src="img/AdeptusMechanicus.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Adeptus Mechanicus<br>Titan Legion</p>    
+    <div class="col-sm-2">
+      <img src="img/AdeptusMechanicus_Titan.jpg" class="img-responsive" style="width:100%" alt="Image">
+      <p>Adeptus Mechanicus<br>Titan Legion</p>
     </div>
-    <div class="col-sm-2"> 
-      <img src="img/AstraMilitarum.png" class="img-responsive" style="width:100%" alt="Image">
+    <div class="col-sm-2">
+      <img src="img/AstraMilitarum_Baran.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Astra Militarum<br>Baran Siegemasters</p>
     </div>
-    <div class="col-sm-2"> 
-      <img src="img/AstraMilitarum.png" class="img-responsive" style="width:100%" alt="Image">
+    <div class="col-sm-2">
+      <img src="img/AstraMilitarum_Cadian.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Astra Militarum<br>Cadian Shock Troops</p>
-    </div> 
-    <div class="col-sm-2"> 
-      <img src="img/AstraMilitarum.png" class="img-responsive" style="width:100%" alt="Image">
+    </div>
+    <div class="col-sm-2">
+      <img src="img/AstraMilitarum_Catachan.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Astra Militarum<br>Catachan Death World</p>
-    </div>     
-    <div class="col-sm-2"> 
-      <img src="img/AstraMilitarum.png" class="img-responsive" style="width:100%" alt="Image">
+    </div>
+    <div class="col-sm-2">
+      <img src="img/AstraMilitarum_Korps.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Astra Militarum<br>Death Korps of Krieg</p>
-    </div> 
+    </div>
   </div>
   <div class="row">
     <div class="col-sm-2">
-      <img src="img/AstraMilitarum.png" class="img-responsive" style="width:100%" alt="Image">
+      <img src="img/AstraMilitarum_Steel.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Astra Militarum<br>Steel Legion</p>
     </div>
-    <div class="col-sm-2"> 
-      <img src="img/AstraMilitarum.png" class="img-responsive" style="width:100%" alt="Image">
-      <p>Astra Militarum<br>Elysian Drop Troops</p>    
+    <div class="col-sm-2">
+      <img src="img/AstraMilitarum_Elysian.jpg" class="img-responsive" style="width:100%" alt="Image">
+      <p>Astra Militarum<br>Elysian Drop Troops</p>
     </div>
   </div>
 
 </div><br>
 
-<div class="container text-center">    
+<div class="container text-center">
   <h3>Forces of Chaos</h3>
   <br>
   <div class="row">
     <div class="col-sm-2">
-      <img src="img/Chaos.jpg" class="img-responsive" style="width:100%" alt="Image">
+      <img src="img/Chaos_Legion.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Chaos Space Marines<br>Black Legion</p>
     </div>
-    <div class="col-sm-2"> 
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-      <p>Chaos Space Marines<br>Emperor's Children</p>    
+    <div class="col-sm-2">
+      <img src="img/Chaos_Children.jpg" class="img-responsive" style="width:100%" alt="Image">
+      <p>Chaos Space Marines<br>Emperor's Children</p>
     </div>
-    <div class="col-sm-2"> 
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+    <div class="col-sm-2">
+      <img src="img/Chaos_Death.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Chaos Space Marines<br>Death Guard</p>
     </div>
-    <div class="col-sm-2"> 
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+    <div class="col-sm-2">
+      <img src="img/Chaos_Eaters.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Chaos Space Marines<br>World Eaters</p>
-    </div> 
-    <div class="col-sm-2"> 
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+    </div>
+    <div class="col-sm-2">
+      <img src="img/Chaos_Sons.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Chaos Space Marines<br>Thousand Sons</p>
-    </div>     
-    <div class="col-sm-2"> 
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+    </div>
+    <div class="col-sm-2">
+      <img src="img/Chaos_Alpha.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Chaos Space Marines<br>Alpha Legion</p>
-    </div> 
+    </div>
   </div>
   <div class="row">
     <div class="col-sm-2">
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <img src="img/Cultist_Damned.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Chaos Cultists<br>Lost and the Damned</p>
     </div>
-    <div class="col-sm-2"> 
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-      <p>Chaos Cultists<br>Slaves to Darkness</p>    
+    <div class="col-sm-2">
+      <img src="img/Cultist_Slaves.jpg" class="img-responsive" style="width:100%" alt="Image">
+      <p>Chaos Cultists<br>Slaves to Darkness</p>
     </div>
-    <div class="col-sm-2"> 
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+    <div class="col-sm-2">
+      <img src="img/Cultist_Daemon.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Chaos Cultists<br>Daemonic Incursion</p>
     </div>
-    <div class="col-sm-2"> 
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+    <div class="col-sm-2">
+      <img src="img/DarkMech_Titan.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Dark Mechanicus<br>Traitor Titan Legion</p>
-    </div> 
+    </div>
   </div>
 </div>
 <br>
 
-<div class="container text-center">    
+<div class="container text-center">
   <h3>Xenos</h3>
   <br>
   <div class="row">
@@ -201,85 +201,85 @@
       <img src="img/DarkEldar_Bladed.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Dark Eldar<br>Kabal of the Bladed Lotus</p>
     </div>
-    <div class="col-sm-2"> 
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+    <div class="col-sm-2">
+      <img src="img/Eldar_BielTan.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Eldar<br>Biel-Tan</p>
     </div>
-    <div class="col-sm-2"> 
+    <div class="col-sm-2">
       <img src="img/Eldar_Iyanden.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Eldar<br>Iyanden</p>
     </div>
-    <div class="col-sm-2"> 
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+    <div class="col-sm-2">
+      <img src="img/Eldar_SaimHann.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Eldar<br>Saim-Hann</p>
-    </div> 
-    <div class="col-sm-2"> 
+    </div>
+    <div class="col-sm-2">
       <img src="img/Eldar_Ulthwe.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Eldar<br>Ulthwé</p>
-    </div>     
-    <div class="col-sm-2"> 
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-      <p>Eldar<br>Titan Force</p>    </div> 
+    </div>
+    <div class="col-sm-2">
+      <img src="img/Eldar_Titan.jpg" class="img-responsive" style="width:100%" alt="Image">
+      <p>Eldar<br>Titan Force</p>    </div>
   </div>
   <div class="row">
     <div class="col-sm-2">
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <img src="img/Harlequin_Veiled.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Harlequins<br>Masque of the Veiled Path</p>
     </div>
-    <div class="col-sm-2"> 
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+    <div class="col-sm-2">
+      <img src="img/Harlequin_Sorrow.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Harlequins<br>Masque of the Midnight Sorrow</p>
     </div>
-    <div class="col-sm-2"> 
+    <div class="col-sm-2">
       <img src="img/Genstealer_FourArm.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Genestealer Cult<br>Cult of the Four Armed Emperor</p>
     </div>
-    <div class="col-sm-2"> 
-      <img src="img/Inquisition_Sister.jpg" class="img-responsive" style="width:100%" alt="Image">
+    <div class="col-sm-2">
+      <img src="img/Inquisition_Sisters.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Imperial Inquisition<br>Adepta Sororitas</p>
-    </div> 
-    <div class="col-sm-2"> 
+    </div>
+    <div class="col-sm-2">
       <img src="img/Necron_Maynarkh.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Necrons<br>Maynarkh Dynasty</p>
-    </div>     
-    <div class="col-sm-2"> 
+    </div>
+    <div class="col-sm-2">
       <img src="img/Necron_Sautekh.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Necrons<br>Sautekh Dynasty</p>    </div> 
+      <p>Necrons<br>Sautekh Dynasty</p>    </div>
   </div>
   <div class="row">
     <div class="col-sm-2">
       <img src="img/Ork_Goffs.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Orks<br>Clan Goffs Warhorde</p>
     </div>
-    <div class="col-sm-2"> 
+    <div class="col-sm-2">
       <img src="img/Ork_Gargant.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Orks<br>Evil Sunz Gargant Big Mob</p>
     </div>
-    <div class="col-sm-2"> 
+    <div class="col-sm-2">
       <img src="img/Ork_EvilSun.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Orks<br>Evil Sunz Speed Freeks</p>
     </div>
-    <div class="col-sm-2"> 
+    <div class="col-sm-2">
       <img src="img/Ork_Snakebite.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Orks<br>Snakebite Clan</p>
-    </div> 
-    <div class="col-sm-2"> 
+    </div>
+    <div class="col-sm-2">
       <img src="img/Tau_Kelshan.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Tau<br>Ke'lshan</p>
-    </div>     
-    <div class="col-sm-2"> 
+    </div>
+    <div class="col-sm-2">
       <img src="img/Tau_Sacea.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Tau<br>Sa’ Cea</p>    </div> 
+      <p>Tau<br>Sa’ Cea</p>    </div>
   </div>
   <div class="row">
     <div class="col-sm-2">
       <img src="img/Tau_Viorla.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Tau<br>Violra</p>
     </div>
-    <div class="col-sm-2"> 
+    <div class="col-sm-2">
       <img src="img/Tyranid_Dagon.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Tyranids<br>Hive Fleet Dagon</p>    
-    </div> 
+      <p>Tyranids<br>Hive Fleet Dagon</p>
+    </div>
   </div>
 </div>
 	<div class="text-right">
