--- a/website/index.htm
+++ b/website/index.htm
@@ -56,19 +56,24 @@
 </nav>
 
 <div class="container text-center">
+  <br>
+  <div class="row">
+      <img src="img/banner.jpg" class="img-responsive" style="width:500%" alt="Image">
+</div>
+<div class="container text-center">
   <h3>Scenarios</h3>
   <br>
   <div class="row">
     <div class="col-sm-3">
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <img src="img/scenario_Battle.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Battle Line</p>
     </div>
     <div class="col-sm-3">
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <img src="img/Scenario_Fog.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Fog of War</p>
     </div>
     <div class="col-sm-3">
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <img src="img/Scenario_Beacons.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Fire the Beacons</p>
     </div>
   </div>
@@ -287,8 +292,9 @@
 
 
 <footer class="container-fluid text-center">
-  	</div>
-  <p>EA Apocalypse<br/>This website is unofficial and in no way endorsed by Games Workshop Limited. </p>
+    <p>EA Apocalypse<br/>This website is unofficial and in no way endorsed by Games Workshop Limited.</p>
+</div>
+
 </footer>
 
 </div>
