--- a/website/index.htm
+++ b/website/index.htm
@@ -65,7 +65,7 @@
   <br>
   <div class="row">
     <div class="col-sm-3">
-      <img src="img/scenario_Battle.jpg" class="img-responsive" style="width:100%" alt="Image">
+      <img src="img/Scenario_Battle.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Battle Line</p>
     </div>
     <div class="col-sm-3">
