--- a/website/index.htm
+++ b/website/index.htm
@@ -43,10 +43,11 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Archives</a></li>
-        <li><a href="#">Tournaments</a></li>
-        <li><a href="#">Ruleset</a></li>
-        <li><a href="#">Army Builder</a></li>
+        <li class="active"><a href="index.htm">Archives</a></li>
+        <li><a href="tournament.htm">Tournaments</a></li>
+        <li><a href="ruleset.htm">Ruleset</a></li>
+        <li><a href="onlineGaming.htm">Online Gaming</a></li>
+        <li><a href="https://magnusdurr.github.io/snapfire/war/indexEAA.html">Army Builder</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
 
@@ -64,15 +65,15 @@
   <h3>Scenarios</h3>
   <br>
   <div class="row">
-    <div class="col-sm-3">
+    <div class="col-sm-2">
       <img src="img/Scenario_Battle.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Battle Line</p>
     </div>
-    <div class="col-sm-3">
+    <div class="col-sm-2">
       <img src="img/Scenario_Fog.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Fog of War</p>
     </div>
-    <div class="col-sm-3">
+    <div class="col-sm-2">
       <img src="img/Scenario_Beacons.jpg" class="img-responsive" style="width:100%" alt="Image">
       <p>Fire the Beacons</p>
     </div>
