--- a/website/index.htm
+++ b/website/index.htm
@@ -56,7 +56,7 @@
   </div>
 </nav>
 
-<div class="container text-center">
+<div class="container text-center" >
   <br>
   <div class="row">
       <img src="img/banner.jpg" class="img-responsive" style="width:500%" alt="Image">
@@ -152,48 +152,50 @@
 <div class="container text-center">
   <h3>Forces of Chaos</h3>
   <br>
+  <div class="col-sm-2">
+    <img src="img/Chaos_Alpha.jpg" class="img-responsive" style="width:100%" alt="Image">
+    <a href="https://magnusdurr.github.io/list-view/index.html?race=Chaos&list=alphalegion">Chaos Space Marines<br>Alpha Legion</a>
+  </div>
   <div class="row">
     <div class="col-sm-2">
       <img src="img/Chaos_Legion.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Chaos Space Marines<br>Black Legion</p>
-    </div>
-    <div class="col-sm-2">
-      <img src="img/Chaos_Children.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Chaos Space Marines<br>Emperor's Children</p>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=Chaos&list=blacklegion">Chaos Space Marines<br>Black Legion</a>
     </div>
     <div class="col-sm-2">
       <img src="img/Chaos_Death.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Chaos Space Marines<br>Death Guard</p>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=Chaos&list=deathguard">Chaos Space Marines<br>Death Guard</a>
     </div>
     <div class="col-sm-2">
-      <img src="img/Chaos_Eaters.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Chaos Space Marines<br>World Eaters</p>
+      <img src="img/Chaos_Children.jpg" class="img-responsive" style="width:100%" alt="Image">
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=Chaos&list=emperorschildren">Chaos Space Marines<br>Emperor's Children</a>
     </div>
     <div class="col-sm-2">
       <img src="img/Chaos_Sons.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Chaos Space Marines<br>Thousand Sons</p>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=Chaos&list=thousandsons">Chaos Space Marines<br>Thousand Sons</a>
     </div>
-    <div class="col-sm-2">
-      <img src="img/Chaos_Alpha.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Chaos Space Marines<br>Alpha Legion</p>
-    </div>
+
+
+  </div>
+  <div class="col-sm-2">
+    <img src="img/Chaos_Eaters.jpg" class="img-responsive" style="width:100%" alt="Image">
+    <a href="https://magnusdurr.github.io/list-view/index.html?race=Chaos&list=worldeaters">Chaos Space Marines<br>World Eaters</a>
+  </div>
+  <div class="col-sm-2">
+    <img src="img/Cultist_Daemon.jpg" class="img-responsive" style="width:100%" alt="Image">
+    <a href="https://magnusdurr.github.io/list-view/index.html?race=Cultists&list=DI">Chaos Cultists<br>Daemonic Incursion</a>
   </div>
   <div class="row">
     <div class="col-sm-2">
       <img src="img/Cultist_Damned.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Chaos Cultists<br>Lost and the Damned</p>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=Cultists&list=LatD">Chaos Cultists<br>Lost and the Damned</a>
     </div>
     <div class="col-sm-2">
       <img src="img/Cultist_Slaves.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Chaos Cultists<br>Slaves to Darkness</p>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=Cultists&list=StD">Chaos Cultists<br>Slaves to Darkness</a>
     </div>
     <div class="col-sm-2">
-      <img src="img/Cultist_Daemon.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Chaos Cultists<br>Daemonic Incursion</p>
-    </div>
-    <div class="col-sm-2">
-      <img src="img/DarkMech_Titan.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <p>Dark Mechanicus<br>Traitor Titan Legion</p>
+      <img src="img/DarkMech_Titan.jpg" alt="https://magnusdurr.github.io/list-view/index.html?race=DM&list=TTL" class="img-responsive" style="width:100%" alt="Image">
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=DM&list=TTL">Dark Mechanicus<br>Traitor Titan Legion</a>
     </div>
   </div>
 </div>
